--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 </head>
 
 <body>
+EPID 722, 2016
+  
 <br>
   <br>
-  <a href="syllabus-1.html">Coursep plan</a> --
+  <a href="syllabus-1.html">Course plan</a> --
 
 </body>
 </html>
