--- a/syllabus-1.html
+++ b/syllabus-1.html
@@ -145,22 +145,22 @@ img {
 </tr>
 <tr class="odd">
 <td align="left">Tuesday 3/1</td>
-<td align="left">Open session<sup>1</sup></td>
-<td align="left">TBN</td>
-</tr>
-<tr class="even">
-<td align="left">Thursday 3/3</td>
 <td align="left">Exam preview</td>
 <td align="left">Brookhart/Cole</td>
 </tr>
-<tr class="odd">
-<td align="left">Tuesday 3/8</td>
+<tr class="even">
+<td align="left">Thursday 3/3</td>
 <td align="left">Exam</td>
 <td align="left"></td>
 </tr>
+<tr class="odd">
+<td align="left">Tuesday 3/8</td>
+<td align="left">Exam review</td>
+<td align="left">Brookhart/Cole</td>
+</tr>
 <tr class="even">
 <td align="left">Thursday 3/10</td>
-<td align="left">Exam review</td>
+<td align="left">Open Session<sup>1</sup></td>
 <td align="left">Brookhart/Cole</td>
 </tr>
 <tr class="odd">
