--- a/syllabus-1.html
+++ b/syllabus-1.html
@@ -90,58 +90,18 @@ img {
 </tr>
 <tr class="even">
 <td align="left">Thursday 1/21</td>
-<td align="left">IP-weighting and propensity scores <span class="citation">(9–12)</span></td>
+<td align="left">The g formula, cont.</td>
 <td align="left">Brookhart</td>
 </tr>
 <tr class="odd">
 <td align="left">Tuesday 1/26</td>
-<td align="left">Simulation</td>
+<td align="left">IP-weighting and propensity scores <span class="citation">(9–12)</span></td>
 <td align="left">Brookhart</td>
 </tr>
 <tr class="even">
-<td align="left">Thursday 1/28</td>
-<td align="left">Bootstrap</td>
-<td align="left">Brookhart</td>
-</tr>
-<tr class="odd">
-<td align="left">Tuesday 2/2</td>
-<td align="left">Maximum likelihood <span class="citation">(13)</span></td>
-<td align="left">Cole</td>
-</tr>
-<tr class="even">
-<td align="left">Thursday 2/4</td>
-<td align="left">Bayesian inference <span class="citation">(14)</span></td>
-<td align="left">Cole</td>
-</tr>
-<tr class="odd">
-<td align="left">Tuesday 2/9</td>
-<td align="left">Survival functions <span class="citation">(15)</span></td>
-<td align="left">Cole</td>
-</tr>
-<tr class="even">
-<td align="left">Thursday 2/11</td>
-<td align="left">IP-weighted survival functions <span class="citation">(16)</span></td>
-<td align="left">Cole</td>
-</tr>
-<tr class="odd">
-<td align="left">Tuesday 2/16</td>
-<td align="left">IP-weighted Cox models <span class="citation">(17)</span></td>
-<td align="left">Cole</td>
-</tr>
-<tr class="even">
-<td align="left">Thursday 2/18</td>
-<td align="left">Generalizability <span class="citation">(18)</span></td>
-<td align="left">Cole</td>
-</tr>
-<tr class="odd">
-<td align="left">Tuesday 2/23</td>
-<td align="left">Missing data <span class="citation">(19)</span></td>
-<td align="left">Cole</td>
-</tr>
-<tr class="even">
-<td align="left">Thursday 2/25</td>
-<td align="left">Smoothing and splines</td>
-<td align="left">Brookhart</td>
+<td align="left"><span class="math">\(\ldots\)</span></td>
+<td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Tuesday 3/1</td>
@@ -230,6 +190,18 @@ img {
 </tr>
 </tbody>
 </table>
+<!--
+| Tuesday  1/26? | Simulation                       | Brookhart         |
+| Thursday 1/28? | Bootstrap                           | Brookhart         |
+| Tuesday 2/2?   | Maximum likelihood [@cole_maximum_2014]       | Cole              |
+| Thursday 2/7?  | Bayesian inference [@cole_bayesian_2012]      | Cole              |
+| Tuesday 2/9?   | Survival functions [@cole_survival_2010]         | Cole              |
+| Thursday 2/11? | IP-weighted survival functions [@cole_adjusted_2004]  | Cole         |
+| Tuesday 2/16?  | IP-weighted Cox models [@buchanan_worth_2014]                       | Cole              |
+| Thursday 2/18? | Generalizability [@cole_generalizing_2010]             | Cole              |
+| Tuesday 2/23?  | Missing data [@greenland_critical_1995]        | Cole              |
+| Thursday 2/25? | Smoothing and splines | Brookhart              |
+-->
 <p><sup>1</sup> Open sessions will be used to cover advanced topics<sup>2</sup>, and accommodate snow days if needed.</p>
 <p><sup>2</sup> List of advanced topics include: covariate/model choice, generalizability, instrumental variables, measurement error, structural nested models.</p>
 <hr />
@@ -247,13 +219,6 @@ img {
 <p>10. Brookhart MA, Wyss R, Layton JB, et al. Propensity score methods for confounding control in nonexperimental research. <em>Circulation: Cardiovascular Quality and Outcomes</em> [electronic article]. 2013;6(5):604–611. (<a href="http://circoutcomes.ahajournals.org/cgi/doi/10.1161/CIRCOUTCOMES.113.000359" class="uri">http://circoutcomes.ahajournals.org/cgi/doi/10.1161/CIRCOUTCOMES.113.000359</a>)</p>
 <p>11. Lunceford JK, Davidian M. Stratification and weighting via the propensity score in estimation of causal treatment effects: A comparative study. <em>Statistics in Medicine</em> [electronic article]. 2004;23(19):2937–2960. (<a href="http://doi.wiley.com/10.1002/sim.1903" class="uri">http://doi.wiley.com/10.1002/sim.1903</a>)</p>
 <p>12. Rosenbaum PR, Rubin DB. Reducing bias in observational studies using subclassification on the propensity score. <em>Journal of the American Statistical Association</em> [electronic article]. 1984;79(387):516. (<a href="http://www.jstor.org/stable/2288398?origin=crossref" class="uri">http://www.jstor.org/stable/2288398?origin=crossref</a>)</p>
-<p>13. Cole SR, Chu H, Greenland S. Maximum likelihood, profile likelihood, and penalized likelihood: A primer. <em>American Journal of Epidemiology</em> [electronic article]. 2014;179(2):252–260. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwt245" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwt245</a>)</p>
-<p>14. Cole SR, Chu H, Greenland S, et al. Bayesian posterior distributions without markov chains. <em>American Journal of Epidemiology</em> [electronic article]. 2012;175(5):368–375. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwr433" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwr433</a>)</p>
-<p>15. Cole SR, Hudgens MG. Survival analysis in infectious disease research: Describing events in time: <em>AIDS</em> [electronic article]. 2010;24(16):2423–2431. (<a href="http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&amp;an=00002030-201010230-00001" class="uri">http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&amp;an=00002030-201010230-00001</a>)</p>
-<p>16. Cole SR, Hernán MA. Adjusted survival curves with inverse probability weights. <em>Computer Methods and Programs in Biomedicine</em> [electronic article]. 2004;75(1):45–49. (<a href="http://linkinghub.elsevier.com/retrieve/pii/S0169260703001378" class="uri">http://linkinghub.elsevier.com/retrieve/pii/S0169260703001378</a>)</p>
-<p>17. Buchanan AL, Hudgens MG, Cole SR, et al. Worth the weight: Using inverse probability weighted cox models in AIDS research. <em>AIDS Research and Human Retroviruses</em> [electronic article]. 2014;30(12):1170–1177. (<a href="http://online.liebertpub.com/doi/abs/10.1089/aid.2014.0037" class="uri">http://online.liebertpub.com/doi/abs/10.1089/aid.2014.0037</a>)</p>
-<p>18. Cole SR, Stuart EA. Generalizing evidence from randomized clinical trials to target populations: The ACTG 320 trial. <em>American Journal of Epidemiology</em> [electronic article]. 2010;172(1):107–115. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq084" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq084</a>)</p>
-<p>19. Greenland S, Finkle WD. A critical look at methods for handling missing covariates in epidemiologic regression analyses. <em>Am. J. Epidemiol.</em> 1995;142(12):1255–1264. </p>
 </div>
 
 
