--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
-EPID722-2016
+<html>
+
+<head>
+<title>EPID722-2016</title>
+</head>
+
+<body>
 
 <br>
   <br>
   <a href="syllabus-1.html">Course plan</a> --
-  <a href="NAMCS_sample.sas">Matching SAS program</a>
-  
-  
+
+<br>
+
+
+</body>
+</html>
