--- a/syllabus-1.html
+++ b/syllabus-1.html
@@ -99,9 +99,49 @@ img {
 <td align="left">Brookhart</td>
 </tr>
 <tr class="even">
-<td align="left"><span class="math">\(\ldots\)</span></td>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">Thursday 1/28</td>
+<td align="left">Bootstrap <span class="citation">(13,14)</span></td>
+<td align="left">Brookhart</td>
+</tr>
+<tr class="odd">
+<td align="left">Tuesday 2/2</td>
+<td align="left">Maximum likelihood <span class="citation">(15)</span></td>
+<td align="left">Cole</td>
+</tr>
+<tr class="even">
+<td align="left">Thursday 2/7</td>
+<td align="left">Bayesian inference <span class="citation">(16)</span></td>
+<td align="left">Cole</td>
+</tr>
+<tr class="odd">
+<td align="left">Tuesday 2/9</td>
+<td align="left">Survival functions <span class="citation">(17)</span></td>
+<td align="left">Cole</td>
+</tr>
+<tr class="even">
+<td align="left">Thursday 2/11</td>
+<td align="left">IP-weighted survival functions <span class="citation">(18)</span></td>
+<td align="left">Cole</td>
+</tr>
+<tr class="odd">
+<td align="left">Tuesday 2/16</td>
+<td align="left">IP-weighted Cox models <span class="citation">(19)</span></td>
+<td align="left">Cole</td>
+</tr>
+<tr class="even">
+<td align="left">Thursday 2/18</td>
+<td align="left">Generalizability <span class="citation">(20)</span></td>
+<td align="left">Cole</td>
+</tr>
+<tr class="odd">
+<td align="left">Tuesday 2/23</td>
+<td align="left">Missing data <span class="citation">(21)</span></td>
+<td align="left">Cole</td>
+</tr>
+<tr class="even">
+<td align="left">Thursday 2/25?</td>
+<td align="left">Smoothing and splines</td>
+<td align="left">Brookhart</td>
 </tr>
 <tr class="odd">
 <td align="left">Tuesday 3/1</td>
@@ -190,35 +230,32 @@ img {
 </tr>
 </tbody>
 </table>
-<!--
-| Tuesday  1/26? | Simulation                       | Brookhart         |
-| Thursday 1/28? | Bootstrap                           | Brookhart         |
-| Tuesday 2/2?   | Maximum likelihood [@cole_maximum_2014]       | Cole              |
-| Thursday 2/7?  | Bayesian inference [@cole_bayesian_2012]      | Cole              |
-| Tuesday 2/9?   | Survival functions [@cole_survival_2010]         | Cole              |
-| Thursday 2/11? | IP-weighted survival functions [@cole_adjusted_2004]  | Cole         |
-| Tuesday 2/16?  | IP-weighted Cox models [@buchanan_worth_2014]                       | Cole              |
-| Thursday 2/18? | Generalizability [@cole_generalizing_2010]             | Cole              |
-| Tuesday 2/23?  | Missing data [@greenland_critical_1995]        | Cole              |
-| Thursday 2/25? | Smoothing and splines | Brookhart              |
--->
 <p><sup>1</sup> Open sessions will be used to cover advanced topics<sup>2</sup>, and accommodate snow days if needed.</p>
 <p><sup>2</sup> List of advanced topics include: covariate/model choice, generalizability, instrumental variables, measurement error, structural nested models.</p>
 <hr />
 <p><strong>References</strong></p>
 <div class="references">
-<p>1. Cole SR, Hudgens MG, Brookhart MA, et al. Risk. <em>American Journal of Epidemiology</em> [electronic article]. 2015;181(4):246–250. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwv001" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwv001</a>)</p>
-<p>2. Brookhart MA, Stürmer T, Glynn RJ, et al. Confounding control in healthcare database research: Challenges and potential approaches. <em>Medical Care</em> [electronic article]. 2010;48:S114–S120. (<a href="http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&amp;an=00005650-201006001-00018" class="uri">http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&amp;an=00005650-201006001-00018</a>)</p>
-<p>3. Brookhart MA. Counterpoint: The treatment decision design. <em>American Journal of Epidemiology</em> [electronic article]. 2015;182(10):840–845. (<a href="http://aje.oxfordjournals.org/lookup/doi/10.1093/aje/kwv214" class="uri">http://aje.oxfordjournals.org/lookup/doi/10.1093/aje/kwv214</a>)</p>
+<p>1. Cole SR, Hudgens MG, Brookhart MA, et al. Risk. <em>Am. J. Epidemiol.</em> [electronic article]. 2015;181(4):246–250. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwv001" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwv001</a>)</p>
+<p>2. Brookhart MA, StC&lt;rmer T, Glynn RJ, et al. Confounding Control in Healthcare Database Research: Challenges and Potential Approaches. <em>Med. Care</em> [electronic article]. 2010;48:S114–S120. (<a href="http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&amp;an=00005650-201006001-00018" class="uri">http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&amp;an=00005650-201006001-00018</a>)</p>
+<p>3. Brookhart MA. Counterpoint: The Treatment Decision Design. <em>Am. J. Epidemiol.</em> [electronic article]. 2015;182(10):840–845. (<a href="http://aje.oxfordjournals.org/lookup/doi/10.1093/aje/kwv214" class="uri">http://aje.oxfordjournals.org/lookup/doi/10.1093/aje/kwv214</a>)</p>
 <p>4. Ray WA. Evaluating medication effects outside of clinical trials: New-user designs. <em>Am. J. Epidemiol.</em> 2003;158(9):915–920. </p>
-<p>5. Snowden JM, Rose S, Mortimer KM. Implementation of g-computation on a simulated data set: Demonstration of a causal inference technique. <em>American Journal of Epidemiology</em> [electronic article]. 2011;173(7):731–738. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq472" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq472</a>)</p>
-<p>6. Petersen ML, Wang Y, Laan MJ van der, et al. Assessing the effectiveness of antiretroviral adherence interventions. using marginal structural models to replicate the findings of randomized controlled trials. <em>J. Acquir. Immune Defic. Syndr.</em> 2006;43 Suppl 1:S96–S103. </p>
-<p>7. Rose S, Snowden JM, Mortimer KM. Rose et al. respond to “g-computation and standardization in epidemiology”. <em>American Journal of Epidemiology</em> [electronic article]. 2011;173(7):743–744. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq475" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq475</a>)</p>
-<p>8. Vansteelandt S, Keiding N. Invited commentary: G-computation-lost in translation? <em>American Journal of Epidemiology</em> [electronic article]. 2011;173(7):739–742. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq474" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq474</a>)</p>
-<p>9. Austin PC. An introduction to propensity score methods for reducing the effects of confounding in observational studies. <em>Multivariate Behavioral Research</em> [electronic article]. 2011;46(3):399–424. (<a href="http://www.tandfonline.com/doi/abs/10.1080/00273171.2011.568786" class="uri">http://www.tandfonline.com/doi/abs/10.1080/00273171.2011.568786</a>)</p>
-<p>10. Brookhart MA, Wyss R, Layton JB, et al. Propensity score methods for confounding control in nonexperimental research. <em>Circulation: Cardiovascular Quality and Outcomes</em> [electronic article]. 2013;6(5):604–611. (<a href="http://circoutcomes.ahajournals.org/cgi/doi/10.1161/CIRCOUTCOMES.113.000359" class="uri">http://circoutcomes.ahajournals.org/cgi/doi/10.1161/CIRCOUTCOMES.113.000359</a>)</p>
-<p>11. Lunceford JK, Davidian M. Stratification and weighting via the propensity score in estimation of causal treatment effects: A comparative study. <em>Statistics in Medicine</em> [electronic article]. 2004;23(19):2937–2960. (<a href="http://doi.wiley.com/10.1002/sim.1903" class="uri">http://doi.wiley.com/10.1002/sim.1903</a>)</p>
-<p>12. Rosenbaum PR, Rubin DB. Reducing bias in observational studies using subclassification on the propensity score. <em>Journal of the American Statistical Association</em> [electronic article]. 1984;79(387):516. (<a href="http://www.jstor.org/stable/2288398?origin=crossref" class="uri">http://www.jstor.org/stable/2288398?origin=crossref</a>)</p>
+<p>5. Snowden JM, Rose S, Mortimer KM. Implementation of G-Computation on a Simulated Data Set: Demonstration of a Causal Inference Technique. <em>Am. J. Epidemiol.</em> [electronic article]. 2011;173(7):731–738. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq472" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq472</a>)</p>
+<p>6. Petersen ML, Wang Y, van der Laan MJ, et al. Assessing the effectiveness of antiretroviral adherence interventions. using marginal structural models to replicate the findings of randomized controlled trials. <em>J. Acquir. Immune Defic. Syndr.</em> 2006;43 Suppl 1:S96–S103. </p>
+<p>7. Rose S, Snowden JM, Mortimer KM. Rose et al. Respond to “G-Computation and Standardization in Epidemiology”. <em>Am. J. Epidemiol.</em> [electronic article]. 2011;173(7):743–744. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq475" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq475</a>)</p>
+<p>8. Vansteelandt S, Keiding N. Invited Commentary: G-Computation-Lost in Translation? <em>Am. J. Epidemiol.</em> [electronic article]. 2011;173(7):739–742. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq474" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq474</a>)</p>
+<p>9. Austin PC. An Introduction to Propensity Score Methods for Reducing the Effects of Confounding in Observational Studies. <em>Multivar. Behav. Res.</em> [electronic article]. 2011;46(3):399–424. (<a href="http://www.tandfonline.com/doi/abs/10.1080/00273171.2011.568786" class="uri">http://www.tandfonline.com/doi/abs/10.1080/00273171.2011.568786</a>)</p>
+<p>10. Brookhart MA, Wyss R, Layton JB, et al. Propensity Score Methods for Confounding Control in Nonexperimental Research. <em>Circ. Cardiovasc. Qual. Outcomes</em> [electronic article]. 2013;6(5):604–611. (<a href="http://circoutcomes.ahajournals.org/cgi/doi/10.1161/CIRCOUTCOMES.113.000359" class="uri">http://circoutcomes.ahajournals.org/cgi/doi/10.1161/CIRCOUTCOMES.113.000359</a>)</p>
+<p>11. Lunceford JK, Davidian M. Stratification and weighting via the propensity score in estimation of causal treatment effects: A comparative study. <em>Stat. Med.</em> [electronic article]. 2004;23(19):2937–2960. (<a href="http://doi.wiley.com/10.1002/sim.1903" class="uri">http://doi.wiley.com/10.1002/sim.1903</a>)</p>
+<p>12. Rosenbaum PR, Rubin DB. Reducing Bias in Observational Studies Using Subclassification on the Propensity Score. <em>J. Am. Stat. Assoc.</em> 1984;79(387):516. </p>
+<p>13. Ahern J, Hubbard A, Galea S. Estimating the Effects of Potential Public Health Interventions on Population Disease Burden: A Step-by-Step Illustration of Causal Inference Methods. <em>Am. J. Epidemiol.</em> [electronic article]. 2009;169(9):1140–1147. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwp015" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwp015</a>)</p>
+<p>14. Barker N. A Practical Introduction to the Bootstrap Using the SAS System. 2005;</p>
+<p>15. Cole SR, Chu H, Greenland S. Maximum Likelihood, Profile Likelihood, and Penalized Likelihood: A Primer. <em>Am. J. Epidemiol.</em> [electronic article]. 2014;179(2):252–260. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwt245" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwt245</a>)</p>
+<p>16. Cole SR, Chu H, Greenland S, et al. Bayesian Posterior Distributions Without Markov Chains. <em>Am. J. Epidemiol.</em> [electronic article]. 2012;175(5):368–375. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwr433" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwr433</a>)</p>
+<p>17. Cole SR, Hudgens MG. Survival analysis in infectious disease research: Describing events in time: <em>AIDS</em> [electronic article]. 2010;24(16):2423–2431. (<a href="http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&amp;an=00002030-201010230-00001" class="uri">http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&amp;an=00002030-201010230-00001</a>)</p>
+<p>18. Cole SR, HernC!n MA. Adjusted survival curves with inverse probability weights. <em>Comput. Methods Programs Biomed.</em> [electronic article]. 2004;75(1):45–49. (<a href="http://linkinghub.elsevier.com/retrieve/pii/S0169260703001378" class="uri">http://linkinghub.elsevier.com/retrieve/pii/S0169260703001378</a>)</p>
+<p>19. Buchanan AL, Hudgens MG, Cole SR, et al. Worth the Weight: Using Inverse Probability Weighted Cox Models in AIDS Research. <em>AIDS Res. Hum. Retroviruses</em> [electronic article]. 2014;30(12):1170–1177. (<a href="http://online.liebertpub.com/doi/abs/10.1089/aid.2014.0037" class="uri">http://online.liebertpub.com/doi/abs/10.1089/aid.2014.0037</a>)</p>
+<p>20. Cole SR, Stuart EA. Generalizing Evidence From Randomized Clinical Trials to Target Populations: The ACTG 320 Trial. <em>Am. J. Epidemiol.</em> [electronic article]. 2010;172(1):107–115. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq084" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq084</a>)</p>
+<p>21. Greenland S, Finkle WD. A critical look at methods for handling missing covariates in epidemiologic regression analyses. <em>Am. J. Epidemiol.</em> 1995;142(12):1255–1264. </p>
 </div>
 
 
