add gcomp recitation material

--- a/gcomp-R-and-SAS-recitation.html
+++ b/gcomp-R-and-SAS-recitation.html
@@ -68,7 +68,7 @@ img {
 
 <div id="TOC">
 <ul>
-<li><a href="#iptw"><span class="toc-section-number">1</span> IPTW</a><ul>
+<li><a href="#g-computation"><span class="toc-section-number">1</span> G-computation</a><ul>
 <li><a href="#preliminaries"><span class="toc-section-number">1.1</span> Preliminaries</a><ul>
 <li><a href="#specify-packages-for-r"><span class="toc-section-number">1.1.1</span> Specify packages for R</a></li>
 </ul></li>
@@ -100,7 +100,7 @@ img {
 <li><a href="#r-6"><span class="toc-section-number">1.8.2</span> R</a></li>
 </ul></li>
 </ul></li>
-<li><a href="#iptw-with-bootstrap"><span class="toc-section-number">2</span> IPTW with bootstrap</a><ul>
+<li><a href="#g-computation-with-bootstrap"><span class="toc-section-number">2</span> G-computation with bootstrap</a><ul>
 <li><a href="#resamples"><span class="toc-section-number">2.1</span> Resamples</a><ul>
 <li><a href="#sas-6"><span class="toc-section-number">2.1.1</span> SAS</a></li>
 <li><a href="#r-7"><span class="toc-section-number">2.1.2</span> R</a></li>
@@ -136,8 +136,8 @@ img {
 </div>
 
 <p><strong>NOTE: ALL SAS and R code below copied from EPID 722 lecture material, from 2015 and 2016. R code based on Alan Brookhart’s program titled, “Gcomp.R”, and Xiaojuan Li’s 2015 SAS program titled, “g-comp.sas”. Bootstrap code by Alan Brookhart.</strong></p>
-<div id="iptw" class="section level1">
-<h1><span class="header-section-number">1</span> IPTW</h1>
+<div id="g-computation" class="section level1">
+<h1><span class="header-section-number">1</span> G-computation</h1>
 <div id="preliminaries" class="section level2">
 <h2><span class="header-section-number">1.1</span> Preliminaries</h2>
 <div id="specify-packages-for-r" class="section level3">
@@ -653,8 +653,8 @@ mean(pbleed.1)-mean(pbleed.0)</code></pre>
 </div>
 </div>
 </div>
-<div id="iptw-with-bootstrap" class="section level1">
-<h1><span class="header-section-number">2</span> IPTW with bootstrap</h1>
+<div id="g-computation-with-bootstrap" class="section level1">
+<h1><span class="header-section-number">2</span> G-computation with bootstrap</h1>
 <div id="resamples" class="section level2">
 <h2><span class="header-section-number">2.1</span> Resamples</h2>
 <div id="sas-6" class="section level3">
